--- a/src/layouts/DefaultLayoutAdmin/DefaultLayoutAdmin.css
+++ b/src/layouts/DefaultLayoutAdmin/DefaultLayoutAdmin.css
@@ -5,4 +5,5 @@
     top: 25px;
     left: 14%;
     padding: 20px;
+    background: linear-gradient(180deg, #141a31 9.19%, #1b4e76 35.48%, #141a31 60.11%);
 }
